[gd_scene load_steps=8 format=2]

[ext_resource path="res://Cenas/Menu/background/gifuti-0000.jpg" type="Texture" id=62]
[ext_resource path="res://Cenas/Menu/DiffMenu/diftitle.png" type="Texture" id=81]
[ext_resource path="res://Cenas/Menu/DiffMenu/medium.png" type="Texture" id=82]
[ext_resource path="res://Cenas/Menu/DiffMenu/easy.png" type="Texture" id=83]
[ext_resource path="res://Cenas/Menu/DiffMenu/hard.png" type="Texture" id=84]
[ext_resource path="res://Cenas/Menu/DiffMenu/DiffMenu.gd" type="Script" id=85]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 62 ) ],
"loop": true,
"name": "New Anim",
"speed": 5.0
} ]

[node name="bg" type="AnimatedSprite"]
scale = Vector2( 1.61, 1.27 )
frames = SubResource( 1 )
animation = "New Anim"
centered = false
script = ExtResource( 85 )

[node name="title" type="Sprite" parent="."]
position = Vector2( 70, 0 )
texture = ExtResource( 81 )
centered = false

[node name="ezbtn" type="Button" parent="."]
margin_left = 261.478
margin_top = 190.086
margin_right = 540.478
margin_bottom = 358.086
rect_scale = Vector2( 0.4, 0.4 )
icon = ExtResource( 83 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mdbtn" type="Button" parent="."]
margin_left = 235.626
margin_top = 270.0
margin_right = 663.626
margin_bottom = 438.0
rect_scale = Vector2( 0.4, 0.4 )
icon = ExtResource( 82 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hdbtn" type="Button" parent="."]
margin_left = 262.216
margin_top = 360.0
margin_right = 550.216
margin_bottom = 528.0
rect_scale = Vector2( 0.4, 0.4 )
icon = ExtResource( 84 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ezbtn" to="." method="_on_ezbtn_pressed"]
[connection signal="pressed" from="mdbtn" to="." method="_on_mdbtn_pressed"]
[connection signal="pressed" from="hdbtn" to="." method="_on_hdbtn_pressed"]
